add base Login functionality w/o tracking add store pages and inventory

--- a/WebAPIDemo/wwwroot/login.html
+++ b/WebAPIDemo/wwwroot/login.html
@@ -5,13 +5,15 @@
     <title>Login</title>
 </head>
 <body>
+    <div id="login--container">
     <form class="login__form">
-        <label for=" userEmail">Username</label>
-        <input id="userEmail" type="email" placeholder="Email" required />
-        <label for=" userPassword">Username</label>
-        <input id="userPassword" type="password" placeholder="Password" required />
+        <label for=" fname">First Name</label>
+        <input id="fname" type="text"  required />
+        <label for=" lname">Last Name</label>
+        <input id="lname" type="text"  required />
         <input type="submit" value="Login" />
     </form>
+    </div>
     <script src="login.js"></script>
 </body>
 </html>
