--- a/WebAPIDemo/wwwroot/store2.html
+++ b/WebAPIDemo/wwwroot/store2.html
@@ -9,6 +9,11 @@
     <div class="product__conatianer">
 
     </div>
+    <button id="storeone--btn">Click to view this locations previous orders</button>
+
+    <div class="order__container">
+
+    </div>
 
     <script src="store2.js"></script>
 </body>
