--- a/WebAPIDemo/wwwroot/store3.html
+++ b/WebAPIDemo/wwwroot/store3.html
@@ -10,6 +10,12 @@
 
     </div>
 
+    <button id="storeone--btn">Click to view this locations previous orders</button>
+
+    <div class="order__container">
+
+    </div>
+
     <script src="store3.js"></script>
 </body>
 </html>
