--- a/WebAPIDemo/wwwroot/index.html
+++ b/WebAPIDemo/wwwroot/index.html
@@ -73,11 +73,13 @@
                             <input type="password" id="userpassword" class="main__content" required>
                             <label class="main__content" for="register--user"></label>
                             <input type="submit" id="register--user" class="main__btn" value="Register">
-                            <!-- <button class="main__btn" id="register_user">
-                             <a href="#">Register</a>
-                            </button> -->
+
                         </form>
-                     </div>
+                    </div>
+                    <div id="buttonAppear">
+
+                    </div>
+                    
                 </div>
                     <div class="main__img--container">
                     <div class="main__img--card" id="card-2"><i class="fas fa-users"></i></div>
