add cart functionality to store1

--- a/WebAPIDemo/wwwroot/store.html
+++ b/WebAPIDemo/wwwroot/store.html
@@ -44,17 +44,17 @@
             <div class="stores__card">
                 <h2>Store Name</h2>
                 <p>Store Location</p>
-                <div  class=" stores__btn"><button onclick="window.location.href= 'store1.html'">Shop Here</button></div>
+                <div  class=" stores__btn"><button id="store--1" onclick="window.location.href= 'store1.html'">Shop Here</button></div>
             </div>
             <div class=" stores__card">
                 <h2>Store Name</h2>
                 <p>Store Location</p>
-                <div class=" stores__btn"><button onclick="window.location.href= 'store2.html'">Shop Here</button></div>
+                <div class=" stores__btn"><button id ="store--2" onclick="window.location.href= 'store2.html'">Shop Here</button></div>
             </div>
             <div class=" stores__card">
                 <h2>Store Name</h2>
                 <p>Store Location</p>
-                <div class=" stores__btn"><button onclick="window.location.href= 'store3.html'">Shop Here</button></div>
+                <div class=" stores__btn"><button id="store--3" onclick="window.location.href= 'store3.html'">Shop Here</button></div>
             </div>
         </div>
 
