Add testing, dependency injection

--- a/WebAPIDemo/wwwroot/store1.html
+++ b/WebAPIDemo/wwwroot/store1.html
@@ -41,18 +41,24 @@
         <section id="products"></section>
         <section id="cart"></section>
     </main>
-    <div class="checkout">
-        <button type= "button" id="checkout--btn"></button>
+    <div id="checkout">
+        <button type= "button" id="checkout--btn" onclick="ConfirmPurchase()">
+            Checkout
+        </button>
     </div>
 
-    <!--<div class="product__conatianer">
+    <div class="product__conatianer">
 
     </div>
     <button id="storeone--btn">Click to view this locations previous orders</button>
 
     <div class="order__container">
 
-    </div>-->
+    </div>
+    <button id="customer--btn">Click to view your previous orders</button>
+    <div class="customer__order">
+
+    </div>
 
     <script src="store1.js"></script>
 </body>
