attempting to setup auth0; not working yet

--- a/WebAPIDemo/wwwroot/index.html
+++ b/WebAPIDemo/wwwroot/index.html
@@ -1,4 +1,18 @@
-﻿<html lang="en">
+﻿
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -11,9 +25,9 @@
     <link rel="stylesheet" href="shop.css">
 </head>
 
-<body>
+<body>-->
     <!-- create the nav bar -->
-    <nav class="navbar">
+    <!--<nav class="navbar">
         <div class="navbar__container">
             <a href="index.html" id="navbar-logo">D&D Sword & Spell</a>
             <div id="mobile-menu" class="navbar__toggle">
@@ -39,10 +53,10 @@
                 </li>
             </ul>
         </div>
-    </nav>
+    </nav>-->
 
     <!-- Hero Section -->
-    <div class="hero" id="home">
+    <!--<div class="hero" id="home">
         <div class="hero__container">
             <h1 class="hero__heading">
                 Choose Your <span>Adventure</span>
@@ -52,11 +66,11 @@
                 <a href="store.html">Explore</a>
             </button>
         </div>
-    </div>
+    </div>-->
 
     <!-- Include store selector carosal -->
     <!--Sign up feature  -->
-        <div class="main" id="sign-up">
+        <!--<div class="main" id="sign-up">
             <div class="main__container">
                 <div class="main__content">
                     <h1>Join</h1>
@@ -85,10 +99,10 @@
                     <div class="main__img--card" id="card-2"><i class="fas fa-users"></i></div>
                     </div>
             </div>
-        </div>
+        </div>-->
 
     <!-- footer section -->
-    <div class="footer__container">
+    <!--<div class="footer__container">
         <div class="footer__links">
             <div class="footer__links--wrapper">
                 <div class="footer__links--items">
@@ -156,4 +170,4 @@
     <script src="register.js"></script>
 </body>
 
-</html>
+</html>-->
